--- a/종속 계층/종속개념.css
+++ b/종속 계층/종속개념.css
@@ -2,3 +2,38 @@
   text-decoration: overline;
   color: red;
 }
+@layer module, state;
+
+@layer module {
+  .alert {
+    border: medium solid violet;
+    background-color: yellow;
+    color: white;
+  }
+}
+
+@layer state {
+  .alert {
+    background-color: brown;
+  }
+  p {
+    border: medium solid limegreen;
+  }
+}
+/* base 가 적용되고 special 이 적용  */
+@layer base, special; 
+
+@layer special {
+  .item {
+    color: rebeccapurple;
+  }
+}
+
+@layer base {
+  .item {
+    color: green;
+    border: 5px solid green;
+    font-size: 1.3em;
+    padding: 0.5em;
+  }
+}
